--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		    </div>
 		    <div class="col-sm-4">
 		      <h3>Education</h3>
-		      <p class="paragraph-about-me">I'm part of the Graduating Class of 21'-22' of the Technological University of the Philippines. For most of my time during my education years, I spent almost half of it in an online learning modality. Though I did enjoy my face-to-face classes, it was also an immersive situation for me to learn as well in the online modality. I'm a firm believer of education, <span id="highlight"> education for me is a commitment which we all have ever since we where born.</span> As we grow older, we must strive for greater knowledge so that learning is perpetual to each and everyone of us".</p>
+		      <p class="paragraph-about-me">I'm part of the Graduating Class of 21'-22' of the Technological University of the Philippines. For most of my time during my education years, I spent almost half of it in an online learning modality. Though I did enjoy my face-to-face classes, it was also an immersive situation for me to learn as well in the online modality. I'm a firm believer of education, <span id="highlight"> education for me is a commitment which we all have ever since we were born.</span> As we grow older, we must strive for greater knowledge so that learning is perpetual to each and everyone of us".</p>
 		    </div>
 		    <div class="col-sm-4">
 		      <h3>Interest</h3>
@@ -149,7 +149,7 @@
 			<div class="text-center py-2 pt-5">
 				<h2 id="projects-made-1" class="col-md-12 text-center">PROJECTS MADE</h2>
 			</div>
-						<div class="row d-none d-md-block mt-md-5">
+						<div class="row d-md-block mt-md-5">
 	                        <div class="offset-xl-3 col-xl-6">
 	                            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 	                                <ol class="carousel-indicators">
