--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 				</section>
 	<!-- LANDING PAGE ENDS HERE! --> 
 
-		
+
 	<!-- ABOUT ME STARTS HERE! -->
 		<section class=" container-fluid min-vh-100 text-center" id="section-2">
 			<div>
 				<h5 id="about-me-1">About</h2>
 			</div>
-			<div class="jumbotron text-center py-3">
+			<div class="jumbotron text-center py-3" id="section-2">
 			  <h1>Carlo Corcuera</h1>
 			  <p id="paragraph-about-me-subtitle">ZUITT TRAINEE</p>
 			</div>
@@ -109,7 +109,7 @@
 			  <div class="row">
 			    <div class="col-sm-6">
 			      <h3>Frontend Programming</h3>
-			      <p class="text-justify paragraph-about-me">I started to have knowledge of frontend programming during our senior high school days; <span id="highlight"> HTML-"Hello World"</span>.It was fascinating to see how powerful these computers are, and now that I'm currently equipping myself with knowledge about them, it makes me realize how important frontend really is. Not just in programming but also in life. As you find a job, it is necessary for you to have a wonderful front-end resume to present. We must learn and continue to improve the front end of ourselves and our lives too, so we do the same for our website as well.</p>
+			      <p class="text-justify paragraph-about-me">I started to have knowledge of frontend programming during our senior high school days; <span id="highlight"> HTML-"Hello World"</span>. It was fascinating to see how powerful these computers are, and now that I'm currently equipping myself with knowledge about them, it makes me realize how important frontend really is. Not just in programming but also in life. As you find a job, it is necessary for you to have a wonderful front-end resume to present. We must learn and continue to improve the front end of ourselves and our lives too, so we do the same for our website as well.</p>
 			    </div>
 			    <div class="col-sm-6">
 			      <h3>Backend Programming</h3>
