bg-color change, about

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<div>
 				<h5 id="about-me-1">About</h2>
 			</div>
-			<div class="jumbotron text-center py-3" id="section-2">
+			<div class="jumbotron text-center bg-light py-3">
 			  <h1>Carlo Corcuera</h1>
 			  <p id="paragraph-about-me-subtitle">ZUITT TRAINEE</p>
 			</div>
