Polish some section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&family=Roboto:ital,wght@0,300;0,500;1,500&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Poppins:ital,wght@1,200&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
 		<!-- CSS EXTERNAL LINK -->
 		<link rel="stylesheet" href="./index.css">		
@@ -23,12 +23,11 @@
 	</head>
 	
 	<body>
-		
 	<!-- NAVBAR STARTS HERE! -->
 		<nav class="container-fluidtext-dark navbar navbar-expand-md bg-light navbar-dark text-center mx-auto col-lg-8 sm-pl-4 pt-3">
 
 			<!-- Carlo Corcuera Left -->
-			  <a class="navbar-brand mx-auto" href="#about-me" id="name1">Carlo Corcuera</a>
+			  <a class="navbar-brand mx-auto" href="#about-me" id="navbar1">Carlo Corcuera</a>
 
 			  <div class="collapse navbar-collapse col-lg-8" id="navbarText"></div>
 
@@ -38,16 +37,16 @@
 			  </button>
 
 			  <!-- Navbar Right -->
-			  <div class="collapse navbar-collapse col-md-4 mt-2 bg-light col-pd-5" id="collapsibleNavbar">
+			  <div class="collapse navbar-collapse col-md-4 mt-3 bg-light col-pd-5" id="collapsibleNavbar">
 			    <ul class="navbar-nav">
 			      <li class="nav-item">
-			        <a class="nav-link" href="#section-2"  id="about-me">About </a>
+			        <a class="nav-link" href="#section-2"  id="navbar2">About </a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="#section-3"  id="about-me">Projects</a>
+			        <a class="nav-link" href="#section-3"  id="navbar2">Projects</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="#pre-footer"  id="about-me">Contact</a>
+			        <a class="nav-link" href="#pre-footer"  id="navbar2">Contact</a>
 			      </li>
 			    </ul>
 			  </div>
@@ -60,8 +59,8 @@
 
 						<a href="https://www.facebook.com/CorcueraCarlo/" target="_blank" ><img class="mt-5 rounded-circle" src="./image/img-carlo-corcuera.jpg" alt="Profile Picture of a Beautiful Individual" width="250"></a>
 
-						<h1 id="name1" class="mt-5">Carlo Corcuera</h1>
-						<h3 id="dev1">Developer & Instructor</h3>
+						<h1 id="landingtext1" class="mt-5">CARLO CORCUERA</h1>
+						<h3 id="landingtext2">Developer & Instructor</h3>
 
 						<div class="row my-5">
 							<div class="offset-md-2 col-md-8 col-lg-8 text-center">
@@ -79,15 +78,14 @@
 				</section>
 	<!-- LANDING PAGE ENDS HERE! --> 
 
-
 	<!-- ABOUT ME STARTS HERE! -->
 		<section class=" container-fluid min-vh-100 text-center" id="section-2">
 			<div>
-				<h5 id="about-me-1">About</h2>
+				<h5 id="abouttext1">About</h2>
 			</div>
 			<div class="jumbotron text-center bg-light py-3">
 			  <h1>Carlo Corcuera</h1>
-			  <p id="paragraph-about-me-subtitle">ZUITT TRAINEE</p>
+			  <p id="abouttext2">ZUITT TRAINEE</p>
 			</div>
 
 			<div class="container">
@@ -146,7 +144,7 @@
 	<!-- PROJECTS STARTS HERE! -->
 			<section class=" container-fluid min-vh-100 text-center" id="section-3">
 				<div class="text-center py-2 pt-5">
-					<h2 id="projects-made-1" class="col-md-12 text-center">PROJECTS MADE</h2>
+					<h2 id="projecttext1" class="col-md-12 text-center">PROJECTS</h2>
 				</div>
 							<div class="row d-md-block mt-md-5">
 		                        <div class="offset-xl-3 col-xl-6">
@@ -179,16 +177,16 @@
 			</section>
 	<!-- PROJECTS ENDS HERE! -->
 
-	<!-- CONTACT US STARTS HERE! -->
+	<!-- CONTACT STARTS HERE! -->
 
 			<div class="text-center py-2">
-				<h2 id="projects-made-1" class="col-md-12 text-center" id="">CONTACT ME</h2>
-				<a href="https://calendar.google.com/calendar/u/0/r/eventedit?state=%5B%5D" target="_blank" class="btn btn-dark mx-auto">Book a meeting</a>
+				<h2 id="contacttext1" class="col-md-12 text-center" id="">CONTACT</h2>
+				<a id="contactboxbutton1" href="https://calendar.google.com/calendar/u/0/r/eventedit?state=%5B%5D" target="_blank" class="btn btn-dark mx-auto my-auto py-auto px-auto">Book a meeting</a>
 			</div>
 
-				<section id="pre-footer" class="col-md-8 col-lg-10 mx-auto text-left">
-					<h2 id="pre-footer-1">Interested? Give it a call?<h2>
-					<h4 id="contact-subtitle">Most people call me Carlo, but you can always call me anytime! 😉</h4>
+				<section id="contactbox" class="col-md-8 col-lg-10 mx-auto text-left">
+					<h2 id="contactboxtext1">Interested? Give it a call?<h2>
+					<h4 id="contactboxtext2">"Most people call me Carlo, but you can always call me anytime!" 😉</h4>
 		            <form>
 		              <div class="form-group">
 		                <label for="exampleFormControlInput1">Full Name</label>
@@ -206,8 +204,8 @@
 		                <label for="exampleFormControlTextarea1">Message</label>
 		                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Text Message Here"></textarea>
 		              </div>
-		              	<button type="button" class="btn btn-light text-center" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
-		                Send Message
+		              	<button type="button" id="contactboxbutton2" class="btn btn-light text-center" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
+		                SEND
 		              </button>
 		            </form>
 				</section>
@@ -226,7 +224,7 @@
 									        Message successfully sent, kindly expect an immediate response within 12 to 24 hours. See you! 
 									</div>
 								      	<div class="modal-footer">
-								        	<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+								        	<button type="button" id="modalbutton1" class="btn btn-dark" data-dismiss="modal">Close</button>
 								      	</div>
 								    </div>
 								  </div>
@@ -241,7 +239,7 @@
 	 	<nav class="text-dark navbar navbar-expand-md bg-light navbar-dark mx-auto">
 
 	 		<!-- Carlo Corcuera Left -->
-	 		  <a class="navbar-brand" href="#about-me" id="footer2"> <img src="" alt=""> Carlo Corcuera</a>
+	 		  <a class="navbar-brand" href="#carlo-corcuera" id="footertext1"> <img src="" alt=""> Carlo Corcuera</a>
 
 
 	 		  <div class="collapse navbar-collapse" id="navbarText"></div>
