Education Section, spelling correction

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			    </div>
 			    <div class="col-sm-4">
 			      <h3>Education</h3>
-			      <p class="paragraph-about-me">I'm part of the graduating class of 21'-22' of the Technological University of the Philippines. For most of my time during my education years, I spent almost half of it in an online learning modality. Though I did enjoy my face-to-face classes, it was also an immersive situation for me to learn as well in the online modality. I'm a firm believer in education. <span id="highlight">Education, for me, is a commitment that we all have ever since we were born.</span> As we grow older, we must strive for greater knowledge so that learning is perpetual for each and every one of us.</p>
+			      <p class="paragraph-about-me">I'm part of the graduated class of 21'-22' of the Technological University of the Philippines. For most of my time during my education years, I spent almost half of it in an online learning modality. Though I did enjoy my face-to-face classes, it was also an immersive situation for me to learn as well in the online modality. I'm a firm believer in education. <span id="highlight">Education, for me, is a commitment that we all have ever since we were born.</span> As we grow older, we must strive for greater knowledge so that learning is perpetual for each and every one of us.</p>
 			    </div>
 			    <div class="col-sm-4">
 			      <h3>Interest</h3>
