Changes made in landing section & contact section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<div class="row my-5">
 							<div class="offset-md-2 col-md-8 col-lg-8 text-center">
 								<p>
-									Hello! I'm <span id="intro">Carlo Corcuera</span>, a 22-year-old who recently finished his bachelor's degree in Industrial Education-Information & Communication Technology at the Technological University of the Philippines-Manila Campus. As I continue my career, I always try and wish to pursue teaching young and "feeling young" individuals. Providing meaningful knowledge to other people always inspires me to be better. On my free days, I always like to code and illustrate my designs and ideas in various ways. May we always be reminded that learning is a true God's gift to each and every one of us, so go ahead and learn that shit. <em>(hehehe ✌️)</em>
+									Hello! 👋 I'm <span id="introhighlight">Carlo Corcuera</span>, a 22-year-old who recently finished his bachelor's degree in Industrial Education-Information & Communication Technology at the Technological University of the Philippines-Manila Campus. As I continue my career, I always try and wish to pursue teaching young and "feeling young" individuals. Providing meaningful knowledge to other people always inspires me to be better. On my free days, I always like to code and illustrate my designs and ideas in various ways. May we always be reminded that learning is a true God's gift to each and every one of us, so go ahead and learn that shit. <em>(hehehe ✌️)</em>
 
 								</p>
 								<blockquote class=" mt-5 blockquote text-center">
