Minor Changes Made

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 	
 	<body>
 	<!-- NAVBAR STARTS HERE! -->
-		<nav class="container-fluidtext-dark navbar navbar-expand-md bg-light navbar-dark text-center mx-auto col-lg-8 sm-pl-4 pt-3">
+		<nav class="container-fluidtext-dark navbar navbar-expand-md bg-sucess navbar-dark text-center mx-auto col-lg-8 sm-pl-4">
 
 			<!-- Carlo Corcuera Left -->
-			  <a class="navbar-brand mx-auto" href="#about-me" id="navbar1">Carlo Corcuera</a>
+			  <a class="navbar-brand mx-auto my-3" href="#about-me" id="navbar1">Carlo Corcuera</a>
 
-			  <div class="collapse navbar-collapse col-lg-8" id="navbarText"></div>
+			  <div class="collapse navbar-collapse col-lg-8 mx-auto" id="navbarText"></div>
 
 			  <!-- Toggler/collapsibe Button -->
 			  <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -46,7 +46,7 @@
 			        <a class="nav-link" href="#section-3"  id="navbar2">Projects</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="#pre-footer"  id="navbar2">Contact</a>
+			        <a class="nav-link" href="#contactbox"  id="navbar2">Contact</a>
 			      </li>
 			    </ul>
 			  </div>
@@ -180,8 +180,8 @@
 	<!-- CONTACT STARTS HERE! -->
 
 			<div class="text-center py-2">
-				<h2 id="contacttext1" class="col-md-12 text-center" id="">CONTACT</h2>
-				<a id="contactboxbutton1" href="https://calendar.google.com/calendar/u/0/r/eventedit?state=%5B%5D" target="_blank" class="btn btn-dark mx-auto my-auto py-auto px-auto">Book a meeting</a>
+				<h2 id="contacttext1" class="col-md-12 text-center">CONTACT</h2>
+				<a id="contactboxbutton1" href="https://calendar.google.com/calendar/u/0/r/eventedit?state=%5B%5D" target="_blank" class="btn btn-dark mx-auto my-auto px-auto">Book a meeting</a>
 			</div>
 
 				<section id="contactbox" class="col-md-8 col-lg-10 mx-auto text-left">
@@ -235,7 +235,7 @@
 				<!-- Modal, Bonus Part End -->
 	<!-- CONTACT US ENDS HERE! -->
 
-	<!-- OLD FOOTER STARTS HERE! -->
+	<!-- FOOTER STARTS HERE! -->
 	 	<nav class="text-dark navbar navbar-expand-md bg-light navbar-dark mx-auto">
 
 	 		<!-- Carlo Corcuera Left -->
@@ -244,7 +244,7 @@
 
 	 		  <div class="collapse navbar-collapse" id="navbarText"></div>
 	 	</nav>
-	<!-- OLD FOOTER ENDS HERE! -->
+	<!-- FOOTER ENDS HERE! -->
 
 	<!-- Bootstrap JavaScript -->
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
