--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- TAB ICON LINK -->
 		<link rel="icon" href="./image/icon-1.png">
 
-		<title>Carlo Corcuera - Portfolio</title>
+		<title>Carlo Corcuera | Portfolio</title>
 
 		<!-- Bootstrap Link -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -239,7 +239,8 @@
 	 	<nav class="text-dark navbar navbar-expand-md bg-light navbar-dark mx-auto">
 
 	 		<!-- Carlo Corcuera Left -->
-	 		  <a class="navbar-brand" href="#carlo-corcuera" id="footertext1"> <img src="" alt=""> Carlo Corcuera</a>
+	 		  <a class="navbar-brand" href="#carlo-corcuera" id="footertext1">Carlo Corcuera |
+	 		  <span id="footertext2" class="mx-auto">2021</span>
 
 
 	 		  <div class="collapse navbar-collapse" id="navbarText"></div>
