Revision made in footer-padding

--- a/index.html
+++ b/index.html
@@ -236,14 +236,10 @@
 	<!-- CONTACT US ENDS HERE! -->
 
 	<!-- FOOTER STARTS HERE! -->
-	 	<nav class="text-dark navbar navbar-expand-md bg-light navbar-dark mx-auto">
-
+	 	<nav class="text-dark navbar navbar-expand-md bg-light navbar-dark mx-5 pb-0 mt-3">
 	 		<!-- Carlo Corcuera Left -->
-	 		  <a class="navbar-brand" href="#carlo-corcuera" id="footertext1">Carlo Corcuera |
-	 		  <span id="footertext2" class="mx-auto">2021</span>
-
-
-	 		  <div class="collapse navbar-collapse" id="navbarText"></div>
+	 		  <a class="navbar-brand" href="#carlo-corcuera" id="footertext1">CARLO CORCUERA |
+	 		  <span id="footertext2" class="mx-auto">2022</span>
 	 	</nav>
 	<!-- FOOTER ENDS HERE! -->
 
