Revised the footer

--- a/index.html
+++ b/index.html
@@ -236,11 +236,9 @@
 	<!-- CONTACT US ENDS HERE! -->
 
 	<!-- FOOTER STARTS HERE! -->
-	 	<nav class="text-dark navbar navbar-expand-md bg-light navbar-dark mx-5 pb-0 mt-3">
-	 		<!-- Carlo Corcuera Left -->
-	 		  <a class="navbar-brand" href="#carlo-corcuera" id="footertext1">CARLO CORCUERA |
-	 		  <span id="footertext2" class="mx-auto">2022</span>
-	 	</nav>
+	 	<footer>
+	 		<a class="nav-link" href="#carlo-corcuera"  id="footer">Carlo Corcuera | 2022 </a>
+	 	</footer>
 	<!-- FOOTER ENDS HERE! -->
 
 	<!-- Bootstrap JavaScript -->
