Justify the About Me section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<a href="https://www.facebook.com/CorcueraCarlo/" target="_blank" ><img class="mt-5 rounded-circle" src="./image/img-carlo-corcuera.jpg" alt="Profile Picture of a Beautiful Individual" width="250"></a>
 
 						<h1 id="landingtext1" class="mt-5">CARLO CORCUERA</h1>
-						<h3 id="landingtext2">Developer & Instructor</h3>
+						<h3 id="landingtext2">Developer</h3>
 
 						<div class="row my-5">
 							<div class="offset-md-2 col-md-8 col-lg-8 text-center">
@@ -85,10 +85,10 @@
 			</div>
 			<div class="jumbotron text-center bg-light py-3">
 			  <h1>Carlo Corcuera</h1>
-			  <p id="abouttext2">ZUITT TRAINEE</p>
+			  <p id="abouttext2">carloicorcuera@gmail.com</p>
 			</div>
 
-			<div class="container">
+			<div class="container text-justify">
 			  <div class="row">
 			    <div class="col-sm-4 mt-0">
 			      <h3>Hobbies</h3>
