--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 
 		<!-- Animation -->
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+		<!-- Icon Link -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 	</head>
 	
 	<body>
@@ -39,7 +43,7 @@
 			  </button>
 
 			  <!-- Navbar Right -->
-			  <div class="collapse navbar-collapse col-md-4 mt-3 bg-light col-pd-5" id="collapsibleNavbar">
+			  <div class="collapse navbar-collapse col-md-4 mt-3 col-pd-5" id="collapsibleNavbar">
 			    <ul class="navbar-nav">
 			      <li class="nav-item">
 			        <a class="nav-link" href="#section-2"  id="navbar2">About </a>
@@ -62,12 +66,16 @@
 						<a href="https://www.facebook.com/CorcueraCarlo/" target="_blank" ><img class="mt-5 rounded-circle" src="./image/img-carlo-corcuera.jpg" alt="Profile Picture of a Beautiful Individual" width="250"></a>
 
 						<h1 id="landingtext1" class="mt-5">CARLO CORCUERA</h1>
-						<h3 id="landingtext2">Developer</h3>
+						<h3 id="landingtext2">Developer | Instructor</h3>
 
 						<div class="row my-5">
 							<div class="offset-md-2 col-md-8 col-lg-8 text-center">
 								<p>
-									Hello! 👋 I'm <span id="introhighlight">Carlo Corcuera</span>, a 22-year-old who recently finished his bachelor's degree in Industrial Education-Information & Communication Technology at the Technological University of the Philippines-Manila Campus. As I continue my career, I always try and wish to pursue teaching young and "feeling young" individuals. Providing meaningful knowledge to other people always inspires me to be better. On my free days, I always like to code and illustrate my designs and ideas in various ways. May we always be reminded that learning is a true God's gift to each and every one of us, so go ahead and learn that shit. <em>(hehehe ✌️)</em>
+									Hello! 👋 I'm <span id="introhighlight">Carlo Corcuera</span>, who recently finished his bachelor's degree in Industrial Education-Information & Communication Technology at the Technological University of the Philippines-Manila Campus. As I continue my career, I always try and wish to pursue teaching young and "feeling young" individuals. Providing meaningful knowledge to other people always inspires me to be better. On my free days, I always like to code and illustrate my designs and ideas in various ways. May we always be reminded that learning is a true God's gift to each and every one of us, so go ahead and learn that shit. <em>(hehehe ✌️)</em>
+
+								</p>
+								<p>
+									I'm a firm believer of constant progress for us to achieve our ultimate goal. Change is the most powerful word that we have in our life. The capacity to change ourselves, change our plans and change our missin & vision in life is truly a worthy life-long goal in this world. As a developer, me must live and enjoy our coding experience and code as if there is no tomorrow! Coding is fun! <em><span id="introhighlight">#ILoveCodingSinceDay01</span></em>
 
 								</p>
 								<blockquote class=" mt-5 blockquote text-center">
@@ -85,7 +93,7 @@
 			<div>
 				<h5 id="abouttext1">About</h2>
 			</div>
-			<div class="jumbotron text-center bg-light py-3">
+			<div class="jumbotron text-center py-3">
 			  <h1>Carlo Corcuera</h1>
 			  <p id="abouttext2">carloicorcuera@gmail.com</p>
 			</div>
@@ -179,68 +187,124 @@
 			</section>
 	<!-- PROJECTS ENDS HERE! -->
 
-	<!-- CONTACT STARTS HERE! -->
-
-			<div class="text-center py-2" data-aos="flip-down">
-				<h2 id="contacttext1" class="col-md-12 text-center">CONTACT</h2>
-				<a id="contactboxbutton1" href="https://calendar.google.com/calendar/u/0/r/eventedit?state=%5B%5D" target="_blank" class="btn btn-dark mx-auto my-auto px-auto">Book a meeting</a>
-			</div>
-
-				<section id="contactbox" class="col-md-8 col-lg-10 mx-auto text-left" data-aos="flip-up">
-					<h2 id="contactboxtext1">Interested? Give it a call?<h2>
-					<h4 id="contactboxtext2">"Most people call me Carlo, but you can always call me anytime!" 😉</h4>
-		            <form>
-		              <div class="form-group">
-		                <label for="exampleFormControlInput1">Full Name</label>
-		                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Full Name Here">
-		              </div>
-		              <div class="form-group">
-		                <label for="exampleFormControlInput1">Email</label>
-		                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email Address Here">
-		              </div>
-		              <div class="form-group">
-		                <label for="exampleFormControlInput1">Contact Number</label>
-		                <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Contact Number Here">
-		              </div>
-		              <div class="form-group">
-		                <label for="exampleFormControlTextarea1">Message</label>
-		                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Text Message Here"></textarea>
-		              </div>
-		              	<button type="button" id="contactboxbutton2" class="btn btn-light text-center" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
-		                SEND
-		              </button>
-		            </form>
-				</section>
-
-				<!-- Modal -->
-					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-						<div class="modal-dialog">
-							<div class="modal-content">
-								<div class="modal-header">
-								        <h5 class="modal-title" id="exampleModalLabel">Thank you for contacting us!</h5>
-								        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-								          <span aria-hidden="true">&times;</span>
-								        </button>
-								</div>
-									<div class="modal-body text-center">
-									        Message successfully sent, kindly expect an immediate response within 12 to 24 hours. See you! 
-									</div>
-								      	<div class="modal-footer">
-								        	<button type="button" id="modalbutton1" class="btn btn-dark" data-dismiss="modal">Close</button>
-								      	</div>
-								    </div>
-								  </div>
-								</div>
-							</div>
-						</div>
-					</section>
-				<!-- Modal, Bonus Part End -->
-	<!-- CONTACT US ENDS HERE! -->
-
 	<!-- FOOTER STARTS HERE! -->
-	 	<footer>
-	 		<a class="nav-link" href="#carlo-corcuera"  id="footer">Carlo Corcuera | 2022 </a>
-	 	</footer>
+	 	  <footer class="text-center text-white bg-dark">
+
+	 	    <div class="container">
+
+	 	      <section class="mt-5">
+	 	        <div class="row text-center d-flex justify-content-center pt-5">
+	 	         
+	 	        	<div class="col-md-2">
+	 	        		<h6 class="text-uppercase">
+	 	        		 <a href="#" class="text-white font-weight-bold" data-toggle="modal" data-target="#modalRegister"> CONTACT</a>
+	 	        		 </h6>
+
+	 	        		 	<div class="modal fade" id="modalRegister" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	 	        		 	  <div class="modal-dialog" role="document">
+	 	        		 	    <div class="modal-content">
+	 	        		 	      <div class="modal-header">
+	 	        		 	        <h5 class="modal-title text-dark" id="exampleModalLabel">Contact</h5>
+	 	        		 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	 	        		 	          <span aria-hidden="true">&times;</span>
+	 	        		 	        </button>
+	 	        		 	      </div>
+	 	        		 	      <div class="modal-body text-dark">
+
+	 	        		 	      	<section id="contactbox" class=" text-left" data-aos="flip-up">
+	 	        		 	      		<h2 id="contactboxtext1">Interested? Give it a call?<h2>
+	 	        		 	      			<h4 id="contactboxtext2">"Most people call me Carlo, but you can always call me anytime!" 😉</h4>
+	 	        		 	      			<form>
+	 	        		 	      				<div class="form-group">
+	 	        		 	      					<label for="exampleFormControlInput1">Full Name</label>
+	 	        		 	      					<input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Full Name Here">
+	 	        		 	      				</div>
+	 	        		 	      				<div class="form-group">
+	 	        		 	      					<label for="exampleFormControlInput1">Email</label>
+	 	        		 	      					<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email Address Here">
+	 	        		 	      				</div>
+	 	        		 	      				<div class="form-group">
+	 	        		 	      					<label for="exampleFormControlInput1">Contact Number</label>
+	 	        		 	      					<input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Contact Number Here">
+	 	        		 	      				</div>
+	 	        		 	      				<div class="form-group">
+	 	        		 	      					<label for="exampleFormControlTextarea1">Message</label>
+	 	        		 	      					<textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Text Message Here"></textarea>
+	 	        		 	      				</div>
+
+	 	        		 	      				<p><a href="" type="button" class="btn btn-secondary popover-test" data-content="Successfully sent.">SEND</a></p>
+
+	 	        		 	      			</form>
+	 	        		 	      		</section>
+
+	 	        		 	      </div>
+	 	        		 	      <div class="modal-footer">
+	 	        		 	        <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+	 	        		 	      </div>
+	 	        		 	    </div>
+	 	        		 	  </div>
+	 	        		 	</div>
+
+	 	        	</div>
+
+	 	        	<div class="col-md-2">
+	 	        		<h6 class="text-uppercase font-weight-bold">
+	 	        			<a class="text-white" href="https://goo.gl/maps/ftW9f21ypGRdpnH49" target="_blank">LOCATE</a>
+	 	        		
+	 	        	</div>
+
+	 	        	<div class="col-md-2">
+	 	        		<h6 class="text-uppercase font-weight-bold">
+	 	        			<a class="text-white" href="https://calendar.google.com/calendar/u/0/r/eventedit?state=%5B%5D" target="_blank">MEET</a>
+	 	        		</h6>
+	 	        	</div>
+
+	 	        </div>
+	 	      </section>
+
+	 	      		<hr class="my-5" />
+
+	 	      <section class="mb-5">
+	 	      	<div class="row d-flex justify-content-center">
+	 	      		<div class="col-lg-8">
+	 	      			<p class="paragraph-about-me">
+	 	      				Manila, Philippines 
+	 	      			</p>
+	 	      		</div>
+	 	      	</div>
+	 	      </section>
+
+	 	      <section class="text-center my-5">
+	 	      	<a href="https://www.facebook.com/CorcueraCarlo/" class="text-white me-4">
+	 	      		<i class="fab fa-facebook-f px-3"></i>
+	 	      	</a>
+	 	      	<a href="https://www.instagram.com/carloicorcuera/" class="text-white me-4">
+	 	      		<i class="fab fa-instagram px-3"></i>
+	 	      	</a>
+	 	      	<a href="" class="text-white me-4">
+	 	      		<i class="fa-brands fa-whatsapp px-3"></i>
+	 	      	</a>
+	 	      	<a href="https://www.linkedin.com/in/carlo-i-corcuera/" class="text-white me-4">
+	 	      		<i class="fab fa-linkedin px-3"></i>
+	 	      	</a>
+	 	      	<a href="https://github.com/cheeios" class="text-white me-4">
+	 	      		<i class="fab fa-github px-3"></i>
+	 	      	</a>
+	 	      </section>
+	 	    </div>
+
+
+	 	    <div class="text-center p-3 paragraph-about-me">
+	 	      	<p> 
+	 	      		© 2022 | Carlo Corcuera | Rights Reserved.
+	 	      	<p>
+	 	    </div>
+	 	  </footer>
+
+
+
+
+
 	<!-- FOOTER ENDS HERE! -->
 
 	<!-- Bootstrap JavaScript -->
