--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 	 	      	<a href="https://www.instagram.com/carloicorcuera/" class="text-white me-4">
 	 	      		<i class="fab fa-instagram px-3"></i>
 	 	      	</a>
-	 	      	<a href="" class="text-white me-4">
+	 	      	<a href="https://whatsapp.com/dl/" class="text-white me-4">
 	 	      		<i class="fa-brands fa-whatsapp px-3"></i>
 	 	      	</a>
 	 	      	<a href="https://www.linkedin.com/in/carlo-i-corcuera/" class="text-white me-4">
