--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			        <a class="nav-link" href="#section-3"  id="navbar2">Projects</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="#contactbox"  id="navbar2">Contact</a>
+			        <a class="nav-link" href="cv-carlo-corcuera.pdf" target="_blank" id="navbar2">Curriculum Vitae</a>
 			      </li>
 			    </ul>
 			  </div>
