--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			        <a class="nav-link" href="#section-3"  id="navbar2">Projects</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="cv-carlo-corcuera.pdf" target="_blank" id="navbar2">Curriculum Vitae</a>
+			        <a class="nav-link" href="cv-carlo-corcuera.pdf" target="_blank" id="navbar2">CV</a>
 			      </li>
 			    </ul>
 			  </div>
@@ -66,7 +66,7 @@
 						<a href="https://www.facebook.com/CorcueraCarlo/" target="_blank" ><img class="mt-5 rounded-circle" src="./image/img-carlo-corcuera.jpg" alt="Profile Picture of a Beautiful Individual" width="250"></a>
 
 						<h1 id="landingtext1" class="mt-5">CARLO CORCUERA</h1>
-						<h3 id="landingtext2">Developer | Instructor</h3>
+						<h3 id="landingtext2">Developer</h3>
 
 						<div class="row my-5">
 							<div class="offset-md-2 col-md-8 col-lg-8 text-center">
@@ -162,6 +162,10 @@
 		                                <ol class="carousel-indicators">
 		                                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
 		                                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+		                                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+		                                    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+		                                    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+		                                    <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
 		                                </ol>
 		                                <div class="carousel-inner">
 		                                    <div class="carousel-item active">
@@ -171,6 +175,21 @@
 		                                    </div>
 		                                    <div class="carousel-item">
 		                                        <img class="img-fluid" src="./image/prj-greyhawks.png" alt="...">
+		                                        <div class="carousel-caption d-none d-md-block">
+		                                        </div>
+		                                    </div>
+		                                    <div class="carousel-item">
+		                                        <img class="img-fluid" src="./image/prj-landing1.png" alt="...">
+		                                        <div class="carousel-caption d-none d-md-block">
+		                                        </div>
+		                                    </div>
+		                                    <div class="carousel-item">
+		                                        <img class="img-fluid" src="./image/prj-footer.png" alt="...">
+		                                        <div class="carousel-caption d-none d-md-block">
+		                                        </div>
+		                                    </div>
+		                                    <div class="carousel-item">
+		                                        <img class="img-fluid" src="./image/prj-mobile-register.png" alt="...">
 		                                        <div class="carousel-caption d-none d-md-block">
 		                                        </div>
 		                                    </div>
